tests/data/placebo/test_security_group_revisions_delta/ec2.AuthorizeSecurityGroupIngress_2.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "e479af34-0128-455f-b46d-4a1a5af70882", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 13 Dec 2016 01:00:21 GMT"
            }
        }
    }
}
