tests/data/placebo/test_security_group_revisions_delta/ec2.AuthorizeSecurityGroupIngress_3.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "09b9fc72-a6d6-41f3-9228-a7a66511b1a5", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 13 Dec 2016 01:00:22 GMT"
            }
        }
    }
}
