tests/data/placebo/test_security_group_revisions_delta/ec2.CreateSecurityGroup_1.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-27742e5a",
    "ResponseMetadata": {}
  }
}
