tests/data/placebo/test_security_group_revisions_delta/ec2.CreateTags_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "a73c8f3e-d70b-4b7f-ba36-4e12b6baf40f", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 13 Dec 2016 01:00:20 GMT"
            }
        }
    }
}
