tests/data/placebo/test_security_group_revisions_delta/ec2.CreateTags_2.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "49e5a3fb-2d87-45f4-ae43-c5c1213d85a6", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 13 Dec 2016 01:00:20 GMT"
            }
        }
    }
}
