tests/data/placebo/test_security_group_revisions_delta/ec2.CreateVpc_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {},
    "Vpc": {
      "VpcId": "vpc-f2944494",
      "InstanceTenancy": "default",
      "Tags": [],
      "State": "pending",
      "DhcpOptionsId": "dopt-24ff1940",
      "CidrBlock": "10.42.0.0/16",
      "IsDefault": false
    }
  }
}
