tests/data/placebo/test_security_group_revisions_delta/ec2.DescribeSecurityGroups_3.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "inbound access",
        "Tags": [
          {
            "Value": "DMZ",
            "Key": "NetworkLocation"
          },
          {
            "Value": "blue-moon",
            "Key": "App"
          }
        ],
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 8080,
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "ToPort": 8080,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          },
          {
            "PrefixListIds": [],
            "FromPort": 443,
            "IpRanges": [
              {
                "CidrIp": "10.42.1.0/24"
              }
            ],
            "ToPort": 443,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "allow-access",
        "VpcId": "vpc-f2944494",
        "OwnerId": "644160558196",
        "GroupId": "sg-27742e5a"
      }
    ],
    "ResponseMetadata": {}
  }
}
