tests/data/placebo/test_security_group_revisions_delta/ec2.RevokeSecurityGroupIngress_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "d583b3e6-b91a-4474-b5b5-28268e8d1de7", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 13 Dec 2016 01:00:20 GMT"
            }
        }
    }
}
