tests/data/placebo/test_security_group_revisions_delta/ec2.RevokeSecurityGroupIngress_2.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "6042e6c7-661c-4c52-89d6-a0758b87dcc7", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 13 Dec 2016 01:00:21 GMT"
            }
        }
    }
}
