tests/data/placebo/test_security_group_revisions_delta/tagging.TagResources_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {
      "RetryAttempts": 0,
      "HTTPStatusCode": 200,
      "RequestId": "a73c8f3e-d70b-4b7f-ba36-4e12b6baf40f",
      "HTTPHeaders": {
        "server": "AmazonEC2",
        "content-type": "application/x-amz-json-1.1",
        "date": "Tue, 13 Dec 2016 01:00:20 GMT",
        "content-length": "25",
        "x-amzn-requestid": "a73c8f3e-d70b-4b7f-ba36-4e12b6baf40f"
      }
    }
  }
}
