tests/data/placebo/test_security_group_revisions_delta/tagging.UntagResources_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {
      "RetryAttempts": 0,
      "HTTPStatusCode": 200,
      "RequestId": "9fe6c28b-42d0-4208-b4d9-ca1506bff58b",
      "HTTPHeaders": {
        "server": "AmazonEC2",
        "content-type": "application/x-amz-json-1.1",
        "date": "Tue, 13 Dec 2016 01:00:21 GMT",
        "content-length": "0",
        "x-amzn-requestid": "9fe6c28b-42d0-4208-b4d9-ca1506bff58b"
      }
    }
  }
}
